add amss 6355 support

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -115,13 +115,11 @@ config MSM_AMSS_VERSION
 	default 6220 if MSM_AMSS_VERSION_6220
 	default 6225 if MSM_AMSS_VERSION_6225
 	default 6350 if MSM_AMSS_VERSION_6350
-        default 3200 if MSM_AMSS_VERSION_3200
-
+	default 6355 if MSM_AMSS_VERSION_6355
 choice
 	prompt "AMSS modem firmware version"
 
-	depends on ARCH_MSM7X00A || ARCH_QSD8X50
-	default MSM_AMSS_VERSION_6225
+	default MSM_AMSS_VERSION_6355
 
 	config MSM_AMSS_VERSION_6210
 		bool "6.2.10"
@@ -138,8 +136,8 @@ choice
 	config MSM_AMSS_VERSION_6350
 		bool "6.3.50"
          
-         config MSM_AMSS_VERSION_3200
- 	        bool "3.2.00"
+	config MSM_AMSS_VERSION_6355
+		bool "6.3.55"
 endchoice
 
 menu "Qualcomm MSM Board Type"
@@ -600,7 +598,7 @@ config MSM_HW3D
 config MSM_ADSP
 	depends on ARCH_MSM7X00A
 	tristate "MSM ADSP driver"
-	default y
+	default n
 	help
 	  Provides access to registers needed by the userspace aDSP library.
 
@@ -621,11 +619,18 @@ config HTC_ACOUSTIC_QSD
 
 config MSM_ADSP_REPORT_EVENTS
 	bool "Report modem events from the DSP"
-	default y
+	default n
 	depends on MSM_ADSP
 	help
 	  Normally, only messages from the aDSP are reported to userspace.
 	  With this option, we report events from the aDSP as well.
+
+config MSM_ADSP_COMP
+       depends on ARCH_MSM7X00A
+       tristate "MSM ADSP support init info by RPC"
+       default y
+       help
+         Provides access to registers needed by the userspace aDSP library.
 
 config MSM_QDSP6
 	tristate "QDSP6 support"
