--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -34,6 +34,44 @@ config MSM_MDP31
 	depends on ARCH_QSD8X50
 	default y
 
+config PERFLOCK
+	depends on CPU_FREQ
+	depends on ARCH_QSD8X50 || ARCH_MSM7X30 || ARCH_MSM7X00A || ARCH_MSM7227 || ARCH_MSM7225
+	default n
+	bool "HTC Performance Lock"
+
+config PERFLOCK_BOOT_LOCK
+	depends on PERFLOCK
+	depends on ARCH_QSD8X50 || ARCH_MSM7X30 || ARCH_MSM7X00A || ARCH_MSM7227 || ARCH_MSM7225
+	default n
+	bool "Boot Time Performance Lock"
+
+config PERFLOCK_SCREEN_POLICY
+	depends on PERFLOCK
+	depends on ARCH_QSD8X50 || ARCH_MSM7X00A || ARCH_MSM7227 || ARCH_MSM7225
+	default n
+	bool "Change Cpufreq Policy while Screen ON/OFF"
+
+config PERFLOCK_SCREEN_ON_MIN	
+	depends on PERFLOCK_SCREEN_POLICY
+	int "Minimum speed while screen on"
+	default MSM_CPU_FREQ_MIN
+
+config PERFLOCK_SCREEN_ON_MAX
+	depends on PERFLOCK_SCREEN_POLICY
+	int "Maximum speed while screen on"
+	default MSM_CPU_FREQ_MAX
+
+config PERFLOCK_SCREEN_OFF_MIN
+	depends on PERFLOCK_SCREEN_POLICY
+	int "Minimum speed while screen off"
+	default MSM_CPU_FREQ_MIN
+
+config PERFLOCK_SCREEN_OFF_MAX
+	depends on PERFLOCK_SCREEN_POLICY
+	int "Maximum speed while screen off"
+	default MSM_CPU_FREQ_MAX
+
 config TURBO_MODE
     bool "Turbo mode"
     depends on ARCH_MSM7225 || ARCH_MSM7X00A
